--- a/src/App.css
+++ b/src/App.css
@@ -125,7 +125,7 @@ header #logo img {
 .header-right {
     display: flex;
     align-items: center;
-    gap: 20px;
+    gap: 25px;
 }
 
 .header-right .search-btn-outer,
@@ -134,16 +134,24 @@ header #logo img {
     display: inline-block;
 }
 
-.header-right .icon-search,
-.header-right .icon-user,
 .header-right .fa-cart-shopping {
+    cursor: pointer;
     font-size: 1.5em;
     color: #333;
     transition: color 0.3s;
 }
 
-.header-right .icon-search:hover,
-.header-right .icon-user:hover,
+.header-right .fa-search,
+.header-right .fa-user {
+    padding: 1;
+    cursor: pointer;
+    font-size: 2em;
+    color: #333;
+    transition: color 0.3s;
+}
+
+.header-right .fa-search:hover,
+.header-right .fa-user:hover,
 .header-right .fa-cart-shopping:hover {
     color: #FF5733;
 }
