--- a/src/components/BakeryList/BakeryList.css
+++ b/src/components/BakeryList/BakeryList.css
@@ -1,91 +1,109 @@
 /* Contenedor principal */
 .product-container {
-    padding-top: 45px;
-  }
-  
-  /* Contenido de la sección de productos */
-  .product-content {
-    max-width: 1200px;
-    margin: 0 auto;
-  }
-  
-  /* Encabezado de la sección */
-  .product-header {
-    text-align: center;
-    margin-bottom: 30px;
-  }
-  
-  /* Título de la sección de productos */
-  .product-title {
-    font-size: 2.5rem;
-    font-weight: bold;
-    color: #333;
-    margin: 0;
-  }
-  
-  /* Contenedor de pestañas */
-  .tabs-container {
-    padding: 30px;
-  }
-  
-  /* Estilos para las pestañas */
-  .tabs-nav {
-    display: flex;
-    justify-content: center;
-  }
-  
-  .tabs-nav li {
-    margin-right: 15px;
-    list-style: none;
-  }
-  
-  .tabs-nav li:last-child {
-    margin-right: 0;
-  }
-  
-  /* Botones de las pestañas */
-  .tab-btn {
-    padding: 10px 20px;
-    background-color: #FF5733; /* Coral brillante */
-    color: white;
-    text-decoration: none;
-    border-radius: 5px;
-    font-size: 1rem;
-    transition: background-color 0.3s;
-  }
-  
-  .tab-btn.active,
-  .tab-btn:hover {
-    background-color: #D24D29; /* Color más oscuro para el hover */
-  }
-  
-  /* Estilo para las tarjetas de productos */
+  padding-top: 45px;
+}
+
+/* Contenido de la sección de productos */
+.product-content {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+/* Encabezado de la sección */
+.product-header {
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+/* Título de la sección de productos */
+.product-title {
+  font-size: 2.5rem;
+  font-weight: bold;
+  color: #333;
+  margin: 0;
+}
+
+/* Contenedor de pestañas */
+.tabs-container {
+  padding: 30px;
+}
+
+/* Estilos para las pestañas */
+.tabs-nav {
+  display: flex;
+  justify-content: center;
+}
+
+.tabs-nav li {
+  margin-right: 15px;
+  list-style: none;
+}
+
+.tabs-nav li:last-child {
+  margin-right: 0;
+}
+
+/* Botones de las pestañas */
+.tab-btn {
+  border: none;
+  padding: 10px 20px;
+  background-color: #FF5733;
+  color: white;
+  text-decoration: none;
+  border-radius: 5px;
+  font-size: 1rem;
+  transition: background-color 0.3s;
+}
+
+.tab-btn.active,
+.tab-btn:hover {
+  background-color: #D24D29;
+}
+
+.CreateButton {
+  border: none;
+  padding: 10px 20px;
+  margin-bottom: 70px;
+  margin-left: 130px;
+  cursor: pointer;
+  background-color: #FF5733;
+  color: white;
+  text-decoration: none;
+  border-radius: 5px;
+  font-size: 1rem;
+  transition: background-color 0.3s;
+}
+
+.CreateButton:hover {
+  background-color: #D24D29;
+}
+
+/* Estilo para las tarjetas de productos */
+.product-grid {
+  display: grid;
+  gap: 20px;
+}
+
+.product-grid .col {
+  display: flex;
+  justify-content: center;
+}
+
+/* Estilos responsivos */
+@media (max-width: 576px) {
   .product-grid {
-    display: grid;
-    gap: 20px;
+    grid-template-columns: repeat(2, 1fr);
   }
-  
-  .product-grid .col {
-    display: flex;
-    justify-content: center;
+}
+
+@media (max-width: 768px) {
+  .product-grid {
+    grid-template-columns: repeat(3, 1fr);
   }
-  
-  /* Estilos responsivos */
-  @media (max-width: 576px) {
-    .product-grid {
-      grid-template-columns: repeat(2, 1fr);
-    }
+}
+
+@media (min-width: 992px) {
+  .product-grid {
+    grid-template-columns: repeat(4, 1fr);
   }
-  
-  @media (max-width: 768px) {
-    .product-grid {
-      grid-template-columns: repeat(3, 1fr);
-    }
-  }
-  
-  @media (min-width: 992px) {
-    .product-grid {
-      grid-template-columns: repeat(4, 1fr);
-    }
-  }
-  
+}
