--- a/src/components/BakeryList/BakeryList.css
+++ b/src/components/BakeryList/BakeryList.css
@@ -25,6 +25,7 @@
 
 /* Contenedor de pestañas */
 .tabs-container {
+  margin-top: 100px;
   padding: 30px;
 }
 
@@ -64,7 +65,6 @@
   border: none;
   padding: 10px 20px;
   margin-bottom: 70px;
-  margin-left: 130px;
   cursor: pointer;
   background-color: #FF5733;
   color: white;
@@ -76,6 +76,18 @@
 
 .CreateButton:hover {
   background-color: #D24D29;
+}
+
+.PosCreateButton {
+  margin-left: 130px;
+}
+
+.icon-margin {
+  transition: transform 0.3s ease;
+}
+
+.CreateButton:hover .icon-margin {
+  transform: rotate(90deg);
 }
 
 /* Estilo para las tarjetas de productos */
