--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,6 +1,6 @@
 header {
-    background-color: #fff;
-    border-bottom: 1px solid #ddd;
+
+    background-color: #F5F4F0;
 }
 
 header .header-inner {
@@ -10,6 +10,7 @@ header .header-inner {
 }
 
 header #logo {
+    margin-top: -10px;
     max-width: 150px;
     display: flex;
     align-items: center;
@@ -20,67 +21,39 @@ header #logo img {
     height: auto;
 }
 
-.header-center nav {
-    flex-grow: 1;
-    display: flex;
-    justify-content: center;
-}
-
-.header-center nav ul {
-    list-style-type: none;
-    display: flex;
-    gap: 20px;
-    padding: 0;
-}
-
-.header-center nav ul li a {
-    text-decoration: none;
-    color: #333;
-    font-weight: bold;
-    padding: 8px 15px;
-    transition: color 0.3s;
-}
-
-.header-center nav ul li a:hover {
-    color: #FF5733;
-}
-
-/* Header Right */
 .header-right {
+    margin-top: -10px;
     display: flex;
     align-items: center;
-    gap: 25px;
+    gap: 10px;
 }
 
 .header-right .search-btn-outer,
-.header-right .dropdown,
 .header-right .cart-content {
     display: inline-block;
 }
 
 .header-right .fa-cart-shopping {
     cursor: pointer;
-    font-size: 1.5em;
+    font-size: .7em;
     color: #333;
     transition: color 0.3s;
 }
 
-.header-right .fa-search,
-.header-right .fa-user {
-    padding: 1;
+.header-right .fa-search {
     cursor: pointer;
-    font-size: 2em;
+    font-size: .7em;
     color: #333;
     transition: color 0.3s;
 }
 
 .header-right .fa-search:hover,
-.header-right .fa-user:hover,
 .header-right .fa-cart-shopping:hover {
     color: #FF5733;
 }
 
 .header-right .cart-content button {
+    top: -3px;
     position: relative;
     background: none;
     border: none;
@@ -97,13 +70,12 @@ header #logo img {
 
 .header-right .cart-content span {
     position: absolute;
-    top: -5px;
+    top: -2px;
     right: -10px;
     background-color: #FF5733;
     color: #fff;
-    font-size: 0.75em;
-    font-weight: bold;
-    padding: 2px 6px;
+    font-size: 0.5em;
+    padding: .5px 4px;
     border-radius: 50%;
     min-width: 20px;
     height: 20px;
@@ -113,30 +85,28 @@ header #logo img {
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
 }
 
+.header-right .global-form {
+    margin-top: -300px;
+}
+
+.container .menu-button {
+    background: none;
+    color: black;
+    border: none;
+    font-size: 1.1em;
+    font-weight: 500;
+    margin-left: -12px;
+
+}
+
+.container .menu-button:hover {
+    background: none;
+    color: #FF5733;
+    border: none;
+}
+
+
 @media (max-width: 768px) {
-
-    .header-center nav ul {
-        display: none;
-    }
-
-    .menu-toggle {
-        display: block;
-        background: none;
-        border: none;
-        color: #333;
-        font-size: 1.5em;
-        cursor: pointer;
-    }
-
-    .menu-toggle.active+.header-center nav ul {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 10px;
-        background-color: #fff;
-        padding: 10px;
-        width: 100%;
-    }
 
     .header-right {
         gap: 10px;
