--- a/src/pages/ContactPage/ContactPage.css
+++ b/src/pages/ContactPage/ContactPage.css
@@ -105,3 +105,26 @@
     height: 400px;
     border-radius: 10px;
 }
+
+.small-button {
+    background-color: #514caf;
+    color: white;
+    padding: 50px 50px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    position: absolute;
+    bottom: 400px;
+    left: 670px;
+    width: 40px;
+    height: 40px;
+    text-align: center;
+    margin-bottom: 50888555555px8;
+
+
+}
+
+.contact-form {
+    position: relative;
+
+}
