--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -1,5 +1,108 @@
+@import url('https://fonts.googleapis.com/css2?family=Instrument+Serif:ital@0;1&display=swap');
+
 body {
-    font-family: Arial, sans-serif;
-    color: #333;
+    font-family: Helvetica, sans-serif;
+    color: #212121;
     background-color: #F5F4F0;
+}
+
+.welcome {
+    margin-top: 150vh;
+}
+
+.welcome-video video {
+    width: 100%;
+    height: auto;
+}
+
+.welcome-img img {
+    width: 100%;
+    height: auto;
+}
+
+.scroll-message {
+    color: black;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    padding: 10px 0;
+    z-index: 999;
+}
+
+.scroll-message h4 {
+    font-size: 1em;
+    color: #212121;
+}
+
+.little-message1 {
+    position: relative;
+    top: 5vh;
+    width: 100%;
+    text-align: center;
+}
+
+.little-message1 h4 {
+    font-size: .8em;
+}
+
+.homepage-header {
+    position: relative;
+    width: 70%;
+    top: 40vh;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    padding: 50px 20px;
+    font-family: "Instrument Serif", serif;
+}
+
+.homepage-header h1 {
+    font-size: 6em;
+    font-weight: 500;
+}
+
+.little-message2 {
+    position: relative;
+    top: 15vh;
+    width: 100%;
+    text-align: center;
+}
+
+.little-message2 h4 {
+    font-size: .8em;
+}
+
+.little-message3 {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    padding-left: 50px;
+    padding-right: 50px;
+    top: 30vh;
+    width: 100%;
+    text-align: center;
+}
+
+.little-message3 h4 {
+    font-size: .8em;
+}
+
+.products {
+    position: relative;
+    top: 38vh;
+    text-align: center;
+    padding-bottom: 140px;
+}
+
+.products ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    font-size: 6em;
+    font-family: "Instrument Serif", serif;
+}
+
+.products li {
+    text-decoration: none;
 }
