--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,8 +1,9 @@
 .FooterContainer {
+    background: linear-gradient(to top, #F5F4F0 60%, transparent 100%);
     position: fixed;
     bottom: 0;
     width: 100%;
-    height: 80px;
+    height: 65px;
     margin: 0 auto;
     padding: 0 50px;
     display: flex;
@@ -17,12 +18,11 @@ footer {
 }
 
 .FooterContainer p {
-    margin-top: 40px;
+    margin-top: 30px;
     font-size: 1em;
 }
 
 footer .social-icons {
-    margin-top: 30px;
     display: flex;
     gap: 10px;
 }
@@ -38,12 +38,19 @@ footer .social-icons a:hover {
 }
 
 @media (max-width: 768px) {
-    footer .footer-container {
-        flex-direction: column;
-        text-align: center;
+
+    .FooterContainer {
+        padding: 0 15px;
     }
 
-    footer .footer-section {
-        padding: 10px 0;
+
+    .FooterContainer p {
+        margin-top: 15px;
+        font-size: .6em;
+    }
+
+    footer .social-icons a {
+        margin-top: 0;
+        font-size: .9em;
     }
 }
