--- a/src/components/ProductsGlobalFilter/ProductsGlobalFilter.css
+++ b/src/components/ProductsGlobalFilter/ProductsGlobalFilter.css
@@ -3,6 +3,7 @@
     width: 300px;
     height: 23px;
     border: none;
+    display: block;
 }
 
 .searcher input::placeholder {
@@ -44,8 +45,23 @@
 .searcher .search-icon i {
     font-size: 1em;
     color: #c3c1c1;
+    display: block;
 }
 
 .searcher input {
     padding-right: 30px;
+}
+
+@media (max-width: 768px) {
+
+    .searcher input {
+
+        display: none;
+    }
+
+    .searcher .search-icon i {
+
+        display: none;
+    }
+
 }
