--- a/src/App.css
+++ b/src/App.css
@@ -35,3 +35,17 @@
         width: 100%;
     }
 }
+
+@keyframes pulse {
+    0% {
+        transform: scale(1);
+    }
+
+    50% {
+        transform: scale(1.2);
+    }
+
+    100% {
+        transform: scale(1);
+    }
+}
