--- a/src/pages/BakeryDetails/BakeryDetails.css
+++ b/src/pages/BakeryDetails/BakeryDetails.css
@@ -168,3 +168,23 @@
     height: 150px;
     resize: none;
 }
+
+.toast-top-center {
+    position: fixed;
+    top: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 1050;
+}
+
+.toast-top-center .btn-close:focus {
+    outline: none;
+    box-shadow: none;
+}
+
+.toast-buttons {
+    display: flex;
+    justify-content: end;
+    margin-top: 30px;
+    gap: 10px;
+}
