--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -37,27 +37,17 @@ body {
     text-align: center;
 }
 
-.little-message3 {
-    position: relative;
-    display: flex;
-    justify-content: space-between;
-    padding-left: 50px;
-    padding-right: 50px;
-    top: 30vh;
-    width: 100%;
-    text-align: center;
-}
-
 .little-message1 h4,
 .little-message2 h4,
-.little-message3 h4 {
+.little-message3 h4,
+.little-message4 h4 {
     font-size: 0.8em;
 }
 
 .homepage-header {
     position: relative;
     width: 70%;
-    top: 44vh;
+    top: 43vh;
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
@@ -70,11 +60,21 @@ body {
     font-weight: 500;
 }
 
+.little-message3 {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    padding-left: 50px;
+    padding-right: 50px;
+    top: 35vh;
+    width: 100%;
+    text-align: center;
+}
+
 .products {
     position: relative;
     top: 38vh;
     text-align: center;
-    padding-bottom: 140px;
 }
 
 .products ul {
@@ -89,37 +89,48 @@ body {
     text-decoration: none;
 }
 
-@media (min-width: 400px) and (max-width: 767.98px) {
+.little-message4 {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    padding-left: 50px;
+    padding-right: 50px;
+    top: 50vh;
+    width: 100%;
+    text-align: center;
+    padding-bottom: 60px;
+}
+
+@media (max-width: 575.98px) {
+
     .homepage-header {
-        width: 90%;
-        padding: 30px 15px;
-        top: 32vh;
+        width: 100%;
+        top: 43vh;
     }
 
     .homepage-header h1 {
-        font-size: 3em;
+        font-size: 4em;
     }
 
     .little-message1 h4,
     .little-message2 h4,
-    .little-message3 h4 {
-        font-size: .6em;
-    }
-
-    .welcome-img img {
-        height: 100vh;
-        width: auto;
+    .little-message3 h4,
+    .little-message4 h4 {
+        font-size: 0.7em;
     }
 
     .little-message3 {
-        padding: 0 20px;
+        padding-left: 15px;
+        padding-right: 15px;
     }
 
-    .products {
-        padding-bottom: 100px;
+    .little-message4 {
+        padding-left: 15px;
+        padding-right: 15px;
+        padding-bottom: 90px;
     }
 
     .products ul {
-        font-size: 3em;
+        font-size: 4em;
     }
 }
