--- a/src/components/AddProductForm/AddProductForm.css
+++ b/src/components/AddProductForm/AddProductForm.css
@@ -1,42 +1,26 @@
-.AddProductPage {
+.AddProductForm {
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
+    min-height: 100vh;
 }
 
-.AddProductPage h2 {
-    margin-top: 50px;
-    margin-bottom: 50px;
-    text-align: center;
-}
-
-.form-container {
-    max-width: 800px;
-    width: 100%;
+.AddProductForm .form-container {
+    background-color: rgb(65, 65, 65);
     padding: 20px;
-    border-radius: 8px;
-    background-color: #f9f9f9;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    margin-bottom: 30px;
+    border-radius: 10px;
+    color: rgb(224, 224, 224);
 }
 
-.form-content {
-    width: 100%;
+.AddProductForm .form-container input {
+    background-color: #323232;
+    color: white;
+    border: none;
 }
 
-.form-control {
-    margin-top: 10px;
-}
-
-.form-check-input {
-    margin-left: 10px;
-}
-
-.rotate-on-hover {
-    transition: transform 0.3s ease;
-}
-
-.rotate-on-hover:hover {
-    transform: rotate(90deg);
+.form-container .form-control:focus {
+    background-color: #323232;
+    color: #ffffff;
+    border-color: #FF5733;
+    box-shadow: 0 0 0 0.1em #FF5733;
 }
