--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -19,7 +19,7 @@ body {
 
 .welcome-img img {
     width: auto;
-    height: 105vh;
+    height: 100vh;
 }
 
 
@@ -66,27 +66,25 @@ body {
     justify-content: space-between;
     padding-left: 50px;
     padding-right: 50px;
-    top: 35vh;
+    top: 38vh;
     width: 100%;
     text-align: center;
 }
 
 .products {
     position: relative;
-    top: 38vh;
-    text-align: center;
+    top: 43vh;
+    width: 700px;
+    border-radius: 5%;
+    margin: auto;
 }
 
-.products ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    font-size: 6em;
-    font-family: "Instrument Serif", serif;
-}
-
-.products li {
-    text-decoration: none;
+.products img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    border-radius: 30px;
 }
 
 .little-message4 {
@@ -99,6 +97,20 @@ body {
     width: 100%;
     text-align: center;
     padding-bottom: 60px;
+}
+
+@media (max-width: 991.98px) {
+    .products {
+        width: 750px;
+    }
+
+    .homepage-header {
+        width: 100%;
+    }
+
+    .homepage-header h1 {
+        font-size: 5em;
+    }
 }
 
 @media (max-width: 575.98px) {
@@ -124,13 +136,15 @@ body {
         padding-right: 15px;
     }
 
+    .products {
+        left: 50%;
+        transform: translateX(-50%);
+        margin: 0 auto;
+    }
+
     .little-message4 {
         padding-left: 15px;
         padding-right: 15px;
         padding-bottom: 90px;
-    }
-
-    .products ul {
-        font-size: 4em;
     }
 }
