--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -6,22 +6,25 @@ body {
     background-color: #F5F4F0;
 }
 
-.welcome-img {
-    position: relative;
-    top: 0;
+.welcome-video {
+    margin-top: 0px;
     width: 100vw;
     height: 100vh;
     overflow: hidden;
     display: flex;
     justify-content: center;
     align-items: center;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 25px;
 }
 
-.welcome-img img {
-    width: auto;
+.welcome-video video {
+    width: 100vw;
     height: 100vh;
+    mix-blend-mode: darken;
+    object-fit: cover;
 }
-
 
 .little-message1 {
     position: relative;
@@ -47,9 +50,9 @@ body {
 .homepage-header {
     position: relative;
     width: 70%;
-    top: 43vh;
+    top: 13vh;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translateX(-50%);
     text-align: center;
     padding: 50px 20px;
     font-family: "Instrument Serif", serif;
@@ -71,22 +74,6 @@ body {
     text-align: center;
 }
 
-.products {
-    position: relative;
-    top: 43vh;
-    width: 700px;
-    border-radius: 5%;
-    margin: auto;
-}
-
-.products img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: center;
-    border-radius: 30px;
-}
-
 .little-message4 {
     position: relative;
     display: flex;
@@ -96,32 +83,42 @@ body {
     top: 50vh;
     width: 100%;
     text-align: center;
-    padding-bottom: 60px;
+    padding-bottom: 100px;
+}
+
+.products {
+    position: relative;
+    top: 43vh;
+    width: 700px;
+    margin: auto;
+}
+
+.products img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
 }
 
 @media (max-width: 991.98px) {
-    .products {
-        width: 750px;
-    }
-
     .homepage-header {
-        width: 100%;
-    }
-
-    .homepage-header h1 {
-        font-size: 5em;
-    }
-}
-
-@media (max-width: 575.98px) {
-
-    .homepage-header {
-        width: 100%;
-        top: 43vh;
+        width: 80%;
+        top: 13vh;
     }
 
     .homepage-header h1 {
         font-size: 4em;
+    }
+}
+
+@media (max-width: 575.98px) {
+    .homepage-header {
+        width: 80%;
+        top: 13vh;
+    }
+
+    .homepage-header h1 {
+        font-size: 3em;
     }
 
     .little-message1 h4,
