--- a/src/components/LoginForm/LoginForm.css
+++ b/src/components/LoginForm/LoginForm.css
@@ -36,9 +36,9 @@
     font-size: 16px;
 }
 
-.LoginForm Form.Control:focus {
-    border-color: #007bff;
-    box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+.LoginForm .form-control:focus {
+    border-color: #FF5733;
+    box-shadow: 0 0 0 0.1rem #FF5733;
 }
 
 .LoginForm Button {
@@ -46,11 +46,12 @@
     padding: 10px;
     font-size: 18px;
     font-weight: bold;
+    border: none;
     transition: background-color 0.3s ease;
 }
 
 .LoginForm Button:hover {
-    background-color: #b34e00;
+    background-color: #FF5733;
 }
 
 @media (max-width: 768px) {
