--- a/src/components/AddProductForm/AddProductForm.css
+++ b/src/components/AddProductForm/AddProductForm.css
@@ -2,25 +2,88 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
 }
 
 .AddProductForm .form-container {
-    background-color: rgb(65, 65, 65);
+    background-color: #1f1f1f;
     padding: 20px;
     border-radius: 10px;
     color: rgb(224, 224, 224);
 }
 
 .AddProductForm .form-container input {
-    background-color: #323232;
+    background-color: #282727;
     color: white;
     border: none;
 }
 
 .form-container .form-control:focus {
-    background-color: #323232;
+    background-color: #282727;
     color: #ffffff;
     border-color: #FF5733;
     box-shadow: 0 0 0 0.1em #FF5733;
+}
+
+.AddProductForm .form-container input::placeholder {
+    color: rgba(255, 255, 255, 0.6);
+}
+
+.AddProductForm .custom-button {
+    background-color: #000000;
+    color: white;
+}
+
+.AddProductForm .custom-button:hover {
+    background-color: #FF5733;
+    color: white;
+}
+
+.rotate-on-hover {
+    transition: transform 0.3s ease;
+}
+
+.rotate-container:hover .rotate-on-hover {
+    transform: rotate(90deg);
+}
+
+.form-check {
+    display: flex;
+    align-items: center;
+    margin-left: -7px;
+    margin-top: 15px;
+    gap: 10px;
+    margin-bottom: 10px;
+}
+
+.form-check input[type="checkbox"] {
+    background-color: #2d2c2c;
+    border: 2px solid #2d2c2c;
+    width: 20px;
+    height: 20px;
+    border-radius: 3px;
+    cursor: pointer;
+    transition: background-color 0.3s, border-color 0.3s;
+}
+
+.form-check input[type="checkbox"]:checked {
+    background-color: #FF5733;
+    border-color: #FF5733;
+    box-shadow: 0 0 0 0.1em #FF5733;
+}
+
+.form-check input[type="checkbox"]:hover {
+    border-color: #FF5733;
+}
+
+.form-check input[type="checkbox"]:focus {
+    outline: none;
+    box-shadow: none;
+}
+
+.AddProductForm .add-button,
+.AddProductForm .remove-button {
+    margin-top: 15px;
+    background-color: black;
+    color: white;
+    border: none;
 }
