--- a/src/pages/ProductsPage/ProductsPage.css
+++ b/src/pages/ProductsPage/ProductsPage.css
@@ -2,38 +2,46 @@
     justify-content: center;
     align-items: center;
     padding: 40px;
-    max-width: 1200px;
+    max-width: 100%;
     margin: auto;
     gap: 30px;
     margin-top: 70px;
-    margin-bottom: 70px;
+    margin-bottom: 90px;
 }
 
-.products-title {
+.little-message {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    padding: 0;
+    top: 0;
+    margin: auto;
+    width: 100%;
     text-align: center;
-    font-family: "Instrument Serif", serif;
-    font-weight: 500;
+    align-items: center;
+    padding-bottom: 10px;
+    padding-top: 35px;
 }
 
-.separator-products {
-    width: 15%;
-    height: 4px;
-    margin: 20px auto;
-    background-color: #000;
-    border-radius: 2px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+.little-message h4 {
+    font-size: 0.8em;
+}
+
+.products-cards {
+    padding-top: 20px;
+    margin: auto;
 }
 
 .product-new-button {
     padding: 10px 20px;
-    font-family: "PT Sans", Sans-serif;
-    font-style: italic;
+    font-family: "Helvetica", "sans-serif";
     font-size: 18px;
     background-color: transparent;
     color: #2c2c2c;
     border: 1px solid #2c2c2c;
     border-radius: 5px;
     cursor: pointer;
+    margin-left: 10px;
     transition: all 0.3s ease;
 }
 
@@ -42,42 +50,10 @@
     color: #fff;
 }
 
-.create-modal {
-    backdrop-filter: blur(10px);
-    -webkit-backdrop-filter: blur(10px);
+.product-new-button i {
+    transition: transform 0.3s ease;
 }
 
-.dark-modal .modal-header {
-    background-color: #2b2b2b;
-    display: flex;
-    justify-content: space-between;
-    border-bottom: none;
-    padding-top: 30px;
-}
-
-.dark-modal .modal-title {
-    margin-left: 20px;
-    color: #dadada;
-}
-
-.dark-modal .modal-body {
-    background-color: #2b2b2b;
-}
-
-.dark-modal .modal-dialog {
-    max-width: 60%;
-}
-
-.custom-button {
-    background: none;
-    border: none;
-    color: #dadada;
-    font-size: 1.5em;
-    margin-right: 10px;
-}
-
-.custom-button:hover {
-    color: #FF5733;
-    background: none;
-    border: none;
+.product-new-button:hover i {
+    transform: rotate(90deg);
 }
