--- a/src/pages/AboutPage/AboutPage.css
+++ b/src/pages/AboutPage/AboutPage.css
@@ -1,156 +1,74 @@
   .about-container {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      align-items: center;
-      padding: 40px;
-      max-width: 1200px;
-      margin: auto;
-      gap: 30px;
-      margin-top: 70px;
+      width: 300px;
+      margin-left: 75vw;
   }
 
-  .about-left {
-      flex: 1 1 300px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      text-align: center;
+  .about-container2 {
+      margin: auto;
+      width: 300px;
+      margin-right: 75vw;
+      margin-top: -37vh;
+      text-align: right;
+      padding-bottom: 100px;
   }
 
   .about-title {
+      margin-top: 10vh;
       text-align: center;
-      font-family: "Pacifico", Sans-serif;
+      font-family: "Instrument Serif", serif;
       font-weight: 400;
       font-variation-settings: normal;
-      font-style: italic;
-      letter-spacing: -0.056rem;
   }
 
-  .about-title-content-up {
-      font-family: "PT Sans", Sans-serif;
-      font-size: 18px;
-      font-variation-settings: normal;
-      font-style: italic;
-      text-align: center
+  .about-title h1 {
+      font-size: 6em;
   }
 
-  .about-title-content {
-      font-family: "PT Sans", Sans-serif;
-      font-size: 18px;
-      font-variation-settings: normal;
-      font-style: italic;
-      text-align: justify
+  .AboutPage .little-message2 {
+      margin-top: -15vh;
   }
 
-  .separator-about {
-      width: 15%;
-      height: 4px;
-      margin: 20px auto;
-      background-color: #000;
-      border-radius: 2px;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  .AboutPage .little-message1 {
+      margin-top: -2vh;
   }
 
-  .separator-comment {
-      width: 8%;
-      height: 4px;
-      margin: 20px auto;
-      background-color: #000;
-      border-radius: 2px;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  }
-
-  @media screen and (max-width: 768px) {
-      .separator-about {
-          width: 12%;
-          height: 4px;
-          margin: 20px auto;
-          background-color: #000;
-          border-radius: 2px;
-          box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  @media (max-width: 991.98px) {
+      .about-container {
+          width: 200px;
+          margin-left: 10vw;
+          margin-top: 20vh;
+          text-align: right;
       }
 
-      .separator-comment {
-          width: 12%;
-          height: 4px;
-          margin: 20px auto;
-          background-color: #000;
-          border-radius: 2px;
-          box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+      .about-container2 {
+          width: 200px;
+          margin-right: 10vw;
+          margin-top: -40vh;
+          text-align: left;
+          padding-bottom: 100px;
       }
   }
 
-  .about-image {
-      width: 300px;
-      height: 300px;
-      border-radius: 15px;
-      object-fit: cover;
-      margin-bottom: 20px;
-  }
+  @media (max-width: 575.98px) {
 
-  .about-button {
-      padding: 10px 20px;
-      font-family: "PT Sans", Sans-serif;
-      font-style: italic;
-      font-size: 18px;
-      background-color: transparent;
-      color: #2c2c2c;
-      border: 1px solid #2c2c2c;
-      border-radius: 5px;
-      cursor: pointer;
-      text-transform: uppercase;
-      transition: all 0.3s ease;
-  }
 
-  .about-button:hover {
-      background-color: #2c2c2c;
-      color: #fff;
-  }
+      .little-message1 h4,
+      .little-message2 h4 {
+          font-size: 0.7em;
+      }
 
-  .about-right {
-      flex: 2 1 600px;
-      text-align: left;
-  }
+      .about-container {
+          width: 200px;
+          margin-left: 40vw;
+          margin-top: 20vh;
+          text-align: right;
+      }
 
-  .slider-container {
-      padding: 50px 70px;
-      text-align: center;
-      margin-bottom: 70px;
-  }
-
-  .slider-title {
-      font-size: 24px;
-      margin-bottom: 30px;
-  }
-
-  .slider {
-      display: flex;
-      gap: 20px;
-      overflow-x: auto;
-      scroll-snap-type: x mandatory;
-      padding-bottom: 10px;
-      justify-content: center;
-  }
-
-  .slider-item {
-      flex: 0 0 300px;
-      background-color: #ffffff00;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      scroll-snap-align: start;
-  }
-
-  .slider-item p {
-      font-family: "PT Sans", Sans-serif;
-      font-size: 18px;
-      font-weight: 400;
-      margin-bottom: 10px;
-      font-style: italic;
-  }
-
-  .slider-item span {
-      font-size: 12px;
-      color: #888;
+      .about-container2 {
+          width: 200px;
+          margin-right: 40vw;
+          margin-top: -0vh;
+          text-align: left;
+          padding-bottom: 100px;
+      }
   }
