--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -96,6 +96,19 @@ body {
     .homepage-header h1 {
         font-size: 4em;
     }
+
+    .little-message3 {
+        margin: auto;
+        padding-left: 0;
+        padding-right: 0;
+    }
+
+    .little-message4 {
+        margin: auto;
+        padding-left: 0;
+        padding-right: 0;
+        padding-bottom: 90px;
+    }
 }
 
 @media (max-width: 575.98px) {
@@ -116,13 +129,15 @@ body {
     }
 
     .little-message3 {
-        padding-left: 15px;
-        padding-right: 15px;
+        margin: auto;
+        padding-left: 0;
+        padding-right: 0;
     }
 
     .little-message4 {
-        padding-left: 15px;
-        padding-right: 15px;
+        margin: auto;
+        padding-left: 0;
+        padding-right: 0;
         padding-bottom: 90px;
     }
 }
