--- a/src/components/HomePageGallery/HomePageGallery.css
+++ b/src/components/HomePageGallery/HomePageGallery.css
@@ -1,9 +1,10 @@
 .homepage-products {
     top: 43vh;
     position: relative;
-    width: 100%;
+    width: 105vw;
     height: 400px;
     overflow: hidden;
+    left: -11px;
 }
 
 .home-pagegallery {
@@ -17,8 +18,7 @@
     opacity: 0;
     position: absolute;
     top: 0;
-    left: 11.5px;
-    width: 100%;
+    width: 100vw;
     height: 100%;
     object-fit: cover;
     transition: opacity 1s ease-in-out;
